# esolangs

./: .gitignore  main.py  pyproject.toml
.nova/: Configuration.json
.nova/Tasks/: Python Cleanup.json
befunge/: interpreter.py
brainfuck/: interpreter.py
deadfish/: interpreter.py
malbolge/: interpreter.py
tests/: test_befunge.py  test_brainfuck.py  test_deadfish.py  test_malbolge.py
